set(LIBRARY_NAME ${PROJECT_NAME}-catch-main)

set(SRCS    catch.cpp
   )

include_directories(${CATCH_INCLUDE_DIRS})

add_library(${LIBRARY_NAME} ${SRCS})
install(TARGETS ${LIBRARY_NAME} DESTINATION ${LIB_DIRECTORY})

if(NOT ${USE_SYSTEM_CATCH})
    add_dependencies(${LIBRARY_NAME} Catch)
endif(NOT ${USE_SYSTEM_CATCH})

set(${LIBRARY_NAME}_INCLUDE_DIRS include)
set(${LIBRARY_NAME}_LIBRARIES ${LIBRARY_NAME})
list(APPEND CATCH_LIBRARIES ${LIBRARY_NAME})

set(UNITTEST_INCLUDE_DIRS ${CATCH_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
set(UNITTEST_LIBRARIES ${CATCH_LIBRARIES} PARENT_SCOPE)
