set(LIBRARY_NAME ${PROJECT_NAME}-config)

find_package(Boost REQUIRED COMPONENTS filesystem)

set(SRCS    src/settingsNode.cpp
            src/configFileSearcher.cpp
)

set(LIBRARY_INCLUDES
    ${${PROJECT_NAME}-log_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIRS}
)

include_directories(
    include/config
    ${LIBRARY_INCLUDES}
)

add_library(${LIBRARY_NAME} ${SRCS})
install(TARGETS ${LIBRARY_NAME} DESTINATION ${LIB_DIRECTORY})

set(${LIBRARY_NAME}_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${LIBRARY_INCLUDES}
    CACHE INTERNAL ${LIBRARY_NAME}_INCLUDE_DIRS)

set(${LIBRARY_NAME}_LIBRARIES
    ${LIBRARY_NAME}
    ${${PROJECT_NAME}-log_LIBRARIES}
    ${Boost_LIBRARIES}
    CACHE INTERNAL ${LIBRARY_NAME}_LIBRARIES)

set(${LIBRARY_NAME}_LIBRARY_DIRS
    ${${PROJECT_NAME}-log_LIBRARY_DIRS}
    ${Boost_LIBRARY_DIRS}
    CACHE INTERNAL ${LIBRARY_NAME}_LIBRARY_DIRS)
