set(LIBRARY_NAME ${PROJECT_NAME}-log)

set(${LIBRARY_NAME}_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${GSL_INCLUDE_DIRS} CACHE INTERNAL ${LIBRARY_NAME}_INCLUDE_DIRS)
set(${LIBRARY_NAME}_LIBRARIES ${GSL_LIBRARIES} CACHE INTERNAL ${LIBRARY_NAME}_LIBRARIES)
set(${LIBRARY_NAME}_LIBRARY_DIRS ${GSL_LIBRARY_DIRS} CACHE INTERNAL ${LIBRARY_NAME}_LIBRARY_DIRS)

if(${USE_SYSTEM_GSL})
    find_package(gsl REQUIRED)
else()
    set(${LIBRARY_NAME}_DEPENDENCIES gsl CACHE INTERNAL ${LIBRARY_NAME}_DEPENDENCIES)
endif()
